src/objects/FSTR__PCE_Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist__c</fullName>
        <label>Checklist</label>
        <referenceTo>FSTR__PCE_Checklist__c</referenceTo>
        <relationshipName>Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The checklist item as defined on the Step associated with this item.</inlineHelpText>
        <label>Step Checklist Item</label>
        <referenceTo>FSTR__PCE_Step_Checklist_Item__c</referenceTo>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Task</label>
        <referenceTo>FSTR__Process_Task__c</referenceTo>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Checklist Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>